--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 
     <div class="container">
         <div class="navbar">
-            <a class="active" href="#"><i class="fa fa-fw fa-home"></i></a>
-            <a href="#"><i class="fa fa-fw fa-search"></i></a>
+            <a href="/" class="logo">
+                Haute Couture
+              </a>
+            <!-- <a href="#"><i class="fa fa-fw fa-search"></i></a>
             <a href="#"><i class="fa fa-fw fa-envelope"></i></a>
-            <a href="#"><i class="fa fa-fw fa-user"></i></a>
+            <a href="#"><i class="fa fa-fw fa-user"></i></a> -->
         </div>
         <header>
-            <h2>Header Text</h2>
+            <h2>My Multimedias</h2>
         </header>
         <div class="banner">
             <div class="banner-text"></div>
