--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <!-- image display in row -->
             <div class="responsive">
                 <div class="gallery">
-                    <a target="_blank" href="img_5terre.jpg">
-                        <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
+                    <a target="_blank" href="pool.jpeg">
+                        <img src="pool.jpeg" alt="Cinque Terre" width="600" height="400">
                     </a>
                     <div class="desc">Add a description of the image here</div>
                 </div>
