--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
         <section>
             <!-- image display in row -->
+            <h5>image in row</h5>
             <div class="responsive">
                 <div class="gallery">
                     <a target="_blank" href="pool.jpeg">
@@ -111,40 +112,41 @@
 
         <section>
             <!-- Photo Grid -->
+            <h5>photo grid</h5>
             <div class="row">
                 <div class="column2">
-                    <img src="wedding.jpg" style="width:100%">
-                    <img src="rocks.jpg" style="width:100%">
-                    <img src="falls2.jpg" style="width:100%">
-                    <img src="paris.jpg" style="width:100%">
-                    <img src="nature.jpg" style="width:100%">
-                    <img src="mist.jpg" style="width:100%">
-                    <img src="paris.jpg" style="width:100%">
+                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="falls2.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="nature.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="mist.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
                 <div class="column2">
-                    <img src="underwater.jpg" style="width:100%">
-                    <img src="ocean.jpg" style="width:100%">
-                    <img src="wedding.jpg" style="width:100%">
-                    <img src="mountainskies.jpg" style="width:100%">
-                    <img src="rocks.jpg" style="width:100%">
-                    <img src="underwater.jpg" style="width:100%">
+                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="ocean.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="mountainskies.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
                 <div class="column2">
-                    <img src="wedding.jpg" style="width:100%">
-                    <img src="rocks.jpg" style="width:100%">
-                    <img src="falls2.jpg" style="width:100%">
-                    <img src="paris.jpg" style="width:100%">
-                    <img src="nature.jpg" style="width:100%">
-                    <img src="mist.jpg" style="width:100%">
-                    <img src="paris.jpg" style="width:100%">
+                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="falls2.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="nature.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="mist.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
                 <div class="column2">
-                    <img src="underwater.jpg" style="width:100%">
-                    <img src="ocean.jpg" style="width:100%">
-                    <img src="wedding.jpg" style="width:100%">
-                    <img src="mountainskies.jpg" style="width:100%">
-                    <img src="rocks.jpg" style="width:100%">
-                    <img src="underwater.jpg" style="width:100%">
+                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="ocean.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="mountainskies.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
             </div>
         </section>
@@ -168,7 +170,7 @@
                 </div>
                 <div class="row">
                     <div class="column3">
-                        <img src="map.jpg" style="width:100%">
+                        <img src="map.jpg"  alt ="terre" style="width:100%">
                     </div>
                     <div class="column3">
                         <form action="/action_page.php">
