--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="container">
         <div class="navbar">
             <a href="/" class="logo">
-                Haute Couture
+                PhotographMePortfolio
               </a>
             <!-- <a href="#"><i class="fa fa-fw fa-search"></i></a>
             <a href="#"><i class="fa fa-fw fa-envelope"></i></a>
             <a href="#"><i class="fa fa-fw fa-user"></i></a> -->
         </div>
         <header>
-            <h2>My Multimedias</h2>
+            <h2>Portfolio</h2>
         </header>
         <div class="banner">
             <div class="banner-text"></div>
@@ -30,11 +30,10 @@
         <div class="content">
             <h3>Content</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                PhotographMePortfolio are a one-stop-shop creative agency with the ability to tackle everything from ideation to production, from social media to OOH, from editorial to experiential. You name it, we do it – and we do it with style
+                PhotographMePortfolio legacy as one of the founders of Dazed Media gives us a unique perspective and editorial expertise, placing our finger firmly on the pulse of the cultural zeitgeist  
+                No matter what the project, our team and multiple studio spaces (including the humungous PhotographMe Studio and our in-house space meters away from the creative dreamers) offer a process that allows us to push ideas, spark conversations and deliver something different.
+                When the world changes, we don’t just change with it; we have the speed, the space, the flexibility and the minds to remain one step ahead and influence the future of creativity.
             </p>
         </div>
 
@@ -46,34 +45,34 @@
                     <a target="_blank" href="pool.jpeg">
                         <img src="pool.jpeg" alt="Cinque Terre" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Late night pool glamour</div>
                 </div>
             </div>
 
             <div class="responsive">
                 <div class="gallery">
-                    <a target="_blank" href="img_forest.jpg">
-                        <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+                    <a target="_blank" href="Mountainview.jpg">
+                        <img src="Mountainview.jpg" alt="Forest" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Long Shot Mountain View</div>
                 </div>
             </div>
 
             <div class="responsive">
                 <div class="gallery">
-                    <a target="_blank" href="img_lights.jpg">
-                        <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+                    <a target="_blank" href="Sunset.jpg">
+                        <img src="Sunset.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Sunset Shoot Belle Mare Plage</div>
                 </div>
             </div>
 
             <div class="responsive">
                 <div class="gallery">
-                    <a target="_blank" href="img_mountains.jpg">
-                        <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+                    <a target="_blank" href="Mountain.jpg">
+                        <img src="Mountain.jpg" alt="Mountains" width="600" height="400">
                     </a>
-                    <div class="desc">Add a description of the image here</div>
+                    <div class="desc">Mountain View from Catamaran Shoot</div>
                 </div>
             </div>
 
@@ -86,15 +85,15 @@
                 <figure class="flex">
                     <div></div>
                     <div>
-                        <h3>Aloe polyphylla Schönland ex Pillans</h3>
-                        <p>Endangered native of the Maluti Mountains…</p>
+                        <h3>Beautidful Long range shoot moon sea fade</h3>
+                        <p>Moon comes once in a month</p>
                     </div>
                 </figure>
                 <figure class="flex">
                     <div></div>
                     <div>
-                        <h3>Aloe polyphylla Schönland ex Pillans</h3>
-                        <p>Endangered native of the Maluti Mountains…</p>
+                        <h3>Pastries shoot</h3>
+                        <p>After a good dinner dessert should be outstanding</p>
                     </div>
                 </figure>
             </div>
@@ -103,50 +102,50 @@
         <section>
             <!-- separator -->
             <div class="main">
-                <h1>MYLOGO.COM</h1>
+                <h1>PhotographMe</h1>
                 <hr>
                 <h2>PORTFOLIO</h2>
-                <p>Test: Resize the browser window to see the responsive effect.</p>
+                <p>Projects in Mauritius</p>
             </div>
         </section>
 
         <section>
-            <!-- Photo Grid -->
-            <h5>photo grid</h5>
+            <!-- Gallery -->
+            <h5>Gallery</h5>
             <div class="row">
                 <div class="column2">
-                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="falls2.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="nature.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="mist.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Bed.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Beddeco.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Garden.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="cakes.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Patisserie.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Restaurant.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Coiffeuse.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
                 <div class="column2">
-                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="ocean.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="mountainskies.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Cuisine.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Garden.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Wardrobe.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Beddeco.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
                 <div class="column2">
-                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="falls2.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="nature.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="mist.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="paris.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Bed.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Beddeco.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Garden.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="cakes.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Patisserie.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Restaurant.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Coiffeuse.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
                 <div class="column2">
-                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="ocean.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="wedding.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="mountainskies.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="rocks.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="underwater.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Cuisine.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Bed.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Wardrobe.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Beddeco.jpg" alt="Cinque Terre" style="width:100%">
+                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
             </div>
         </section>
@@ -154,10 +153,10 @@
         <section>
             <!-- separator -->
             <div class="main">
-                <h1>MYLOGO.COM</h1>
+                <h1>PhotographMePortfolio</h1>
                 <hr>
                 <h2>Get in touch</h2>
-                <p>Test: Resize the browser window to see the responsive effect.</p>
+                <p>A great team with specialised editor and photographer is waiting to be committed to you to deliver excellence.</p>
             </div>
         </section>
 
@@ -180,7 +179,7 @@
                             <input type="text" id="lname" name="lastname" placeholder="Your last name..">
                             <label for="country">Country</label>
                             <select id="country" name="country">
-                                <option value="australia">Australia</option>
+                                <option value="Mauritius">Mauritius</option>
                                 <option value="canada">Canada</option>
                                 <option value="usa">USA</option>
                             </select>
@@ -195,7 +194,7 @@
         </section>
 
         <div id="footer">
-            &copy; 2021 Copyright
+            &copy; MohammadSiyad 2021 Copyright
         </div>
 
     </div>
