--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="responsive">
                 <div class="gallery">
-                    <a target="_blank" href="Mountainview.jpg">
+                    <a target="_blank" href="Sunset.jpg">
                         <img src="Mountainview.jpg" alt="Forest" width="600" height="400">
                     </a>
                     <div class="desc">Long Shot Mountain View</div>
@@ -60,7 +60,7 @@
 
             <div class="responsive">
                 <div class="gallery">
-                    <a target="_blank" href="Sunset.jpg">
+                    <a target="_blank" href="Mountainview.jpg">
                         <img src="Sunset.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
                     <div class="desc">Sunset Shoot Belle Mare Plage</div>
@@ -92,7 +92,7 @@
                 <figure class="flex">
                     <div></div>
                     <div>
-                        <h3>Pastries shoot</h3>
+                        <h3>Pastries and Fruits Fusion shoot</h3>
                         <p>After a good dinner dessert should be outstanding</p>
                     </div>
                 </figure>
@@ -121,31 +121,6 @@
                     <img src="Patisserie.jpg" alt="Cinque Terre" style="width:100%">
                     <img src="Restaurant.jpg" alt="Cinque Terre" style="width:100%">
                     <img src="Coiffeuse.jpg" alt="Cinque Terre" style="width:100%">
-                </div>
-                <div class="column2">
-                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Cuisine.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Garden.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Wardrobe.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Beddeco.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
-                </div>
-                <div class="column2">
-                    <img src="Bed.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Beddeco.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Garden.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="cakes.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Patisserie.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Restaurant.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Coiffeuse.jpg" alt="Cinque Terre" style="width:100%">
-                </div>
-                <div class="column2">
-                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Cuisine.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Bed.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Wardrobe.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Beddeco.jpg" alt="Cinque Terre" style="width:100%">
-                    <img src="Fusion.jpg" alt="Cinque Terre" style="width:100%">
                 </div>
             </div>
         </section>
