Assignment Multimedia Commit
Assignment Multimedia Commit

--- a/index.html
+++ b/index.html
@@ -67,15 +67,6 @@
                 </div>
             </div>
 
-            <div class="responsive">
-                <div class="gallery">
-                    <a target="_blank" href="Mountain.jpg">
-                        <img src="Mountain.jpg" alt="Mountains" width="600" height="400">
-                    </a>
-                    <div class="desc">Mountain View from Catamaran Shoot</div>
-                </div>
-            </div>
-
             <div class="clearfix"></div>
         </section>
 
@@ -85,7 +76,7 @@
                 <figure class="flex">
                     <div></div>
                     <div>
-                        <h3>Beautidful Long range shoot moon sea fade</h3>
+                        <h3>Beautidful Long range shoot moon fade</h3>
                         <p>Moon comes once in a month</p>
                     </div>
                 </figure>
