--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="row">
                     <div class="column3">
-                        <img src="map.jpg"  alt ="terre" style="width:100%">
+                        <img src="Map1.PNG"  alt ="terre" style="width:100%">
                     </div>
                     <div class="column3">
                         <form action="/action_page.php">
