Multimedia Final touch Commit
Multimedia Final touch Commit

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="content">
             <h3>Content</h3>
             <p>
-                PhotographMePortfolio are a one-stop-shop creative agency with the ability to tackle everything from ideation to production, from social media to OOH, from editorial to experiential. You name it, we do it – and we do it with style
-                PhotographMePortfolio legacy as one of the founders of Dazed Media gives us a unique perspective and editorial expertise, placing our finger firmly on the pulse of the cultural zeitgeist  
+                PhotographMePortfolio are a one-stop-shop creative agency with the ability to tackle everything from ideation to production, from social media to Out of home, from editorial to experiential. You name it, we do it – and we do it with style
+                PhotographMePortfolio legacy as one of the founders of Meerun Media gives us a unique perspective and editorial expertise.
                 No matter what the project, our team and multiple studio spaces (including the humungous PhotographMe Studio and our in-house space meters away from the creative dreamers) offer a process that allows us to push ideas, spark conversations and deliver something different.
                 When the world changes, we don’t just change with it; we have the speed, the space, the flexibility and the minds to remain one step ahead and influence the future of creativity.
             </p>
@@ -160,7 +160,7 @@
         </section>
 
         <div id="footer">
-            &copy; MohammadSiyad 2021 Copyright
+            &copy; Mohammad Siyad Meerun 2021 Copyright
         </div>
 
     </div>
